[package]
name = "prices"
version = "0.1.0"
edition = "2018"
authors = ["Bleznudd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
home = "0.5.3"
argparse = "0.2.2"